--- a/properties/css/styles.css
+++ b/properties/css/styles.css
@@ -1,4 +1,5 @@
 body {
+  height: 2500px;
   margin: 0;
   padding: 0;
   top: 0;
@@ -102,6 +103,10 @@ body {
 
 .homeText {
   width: 700px;
+  /* border: 2px solid red; */
+}
+.homeButton {
+  margin-top: 20px;
 }
 
 .homeText h3 {
@@ -127,7 +132,7 @@ body {
   color: #bcd6ff;
 }
 #flip > div > div {
-  color: #bcd6ff;
+  color: #587dc2;
   height: 45px;
   margin-bottom: 45px;
   display: inline-block;
@@ -168,11 +173,13 @@ body {
   display: flex;
   justify-content: center;
   margin: 0 20px 0 50px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  
 }
 .homeImage img {
   width: 100%;
   height: auto;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  border-radius: 95px 50px 90px 50px;
 }
 
 /* aboutPage */
@@ -208,7 +215,7 @@ body {
 }
 .bio {
   display: flex;
-}
+}#efefef
 .bio1 div,
 .bio2 div {
   display: flex;
@@ -219,3 +226,9 @@ body {
   margin-right: 10px;
 }
 
+.wcid {
+  /* border: 2px solid red; */
+  background-color: #b6b6b6;
+  margin-top: 150px;
+  height: 250px;
+}
