menyelesaikan work page dengan menambahkan card yang bisa di slide

--- a/properties/css/styles.css
+++ b/properties/css/styles.css
@@ -96,7 +96,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0; 
+  right: 0;
   align-items: center;
   height: 100vh;
 }
@@ -173,12 +173,12 @@ body {
   display: flex;
   justify-content: center;
   margin: 0 20px 0 50px;
-  
 }
 .homeImage img {
   width: 100%;
   height: auto;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   border-radius: 95px 50px 90px 50px;
 }
 
@@ -215,8 +215,8 @@ body {
 }
 .bio {
   display: flex;
-}#efefef
-.bio1 div,
+}
+#efefef .bio1 div,
 .bio2 div {
   display: flex;
   margin-right: 150px;
@@ -231,4 +231,41 @@ body {
   background-color: #b6b6b6;
   margin-top: 150px;
   height: 250px;
+}
+
+#work {
+  margin-top: 100px;
+  padding-top: 140px;
+}
+.work {
+  background-color: #f7f7f7;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+.cardItems {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cardItems .card {
+  margin: 0 10px;
+}
+.card {
+  width: 18rem;
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.card-body {
+  /* border: 2px solid green; */
+  height: 150px;
+}
+.card-text {
+  text-align: center;
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  filter: invert(40%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(80%);
+  /* Ganti dengan warna lain sesuai kebutuhan */
 }
