--- a/properties/css/styles.css
+++ b/properties/css/styles.css
@@ -197,28 +197,36 @@ body {
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 .aboutImage {
-  width: 750px;
-  height: auto;
+  width: 300px;
+  height: 300px;
   margin: 0 0 0 50px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .aboutImage img {
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: 300px;
   filter: brightness(140%);
 }
 .aboutText {
-  padding: 15px;
+  padding: 10px 20px 10px 20px;
+  height: 300px;
+  font-size: 15px;
   margin: 0 50px 0 50px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
+
 .bio {
   display: flex;
 }
-#efefef .bio1 div,
-.bio2 div {
+.bio1,
+.bio2,
+.bio3 {
+  margin-right: 25px;
+}
+.bio1 > div,
+.bio2 > div,
+.bio3 > div {
   display: flex;
-  margin-right: 150px;
 }
 
 .bio b {
@@ -335,8 +343,8 @@ body {
 
 /* Media Queary */
 
-/* Large Devices / Desktop (≥1200px) */ 
-@media only screen and (min-width: 1441px) {
+/* Large Devices / Desktop (≥1441px) */
+/* @media only screen and (min-width: 1441px) {
   .navbar .container {
     padding: 20px;
   }
@@ -360,10 +368,10 @@ body {
   .homeImage {
     width: 400px;
   }
-}
+} */
 
 /* Medium Devices / Tablets (≥768px and <1200px) */
-@media only screen and (min-width: 769px) and (max-width: 1440px) {
+@media only screen and (min-width: 1025px) and (max-width: 1440px) {
   /* Home Page */
   .homeItems {
     padding-top: 80px;
@@ -397,11 +405,79 @@ body {
     position: relative;
     bottom: 40px;
   }
+
+  /* About Page */
+  .aboutImage {
+    margin: 0 10px;
+  }
+  .aboutText {
+    font-size: 14px;
+    margin: 0;
+  }
 }
 
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  /* Home Page */
+  .homeItems {
+    padding-top: 80px;
+  }
+  .homeText {
+    margin-left: 50px;
+    width: 700px;
+  }
+  .homeText h3 {
+    margin-bottom: 25px;
+  }
+  .conText br {
+    display: block;
+  }
+  .conText > div {
+    display: grid;
+  }
+
+  #flip {
+    margin: 0;
+    position: relative;
+    bottom: 37px;
+    left: 95px;
+  }
+  .homeButton {
+    position: relative;
+    bottom: 50px;
+  }
+  .homeImage {
+    width: 350px;
+    position: relative;
+    bottom: 40px;
+  }
+
+  /* About Page */
+  .aboutImage {
+    width: auto;
+    height: 280px;
+    margin: 0 10px;
+  }
+  .aboutImage img {
+    width: auto;
+    height: 280px;
+  }
+  .aboutText {
+    padding: 10px 20px 10px 20px;
+    width: auto;
+    height: auto;
+    /* font-size: 13px; */
+    margin: 0;
+  }
+  .bio {
+    font-size: 12px;
+  }
+  .aboutText h2 {
+    /* font-size: 20px; */
+  }
+}
 
 /* Small Devices / Mobile (≥480px and <768px) */
-@media only screen and (min-width: 425px) and (max-width: 768px) {
+@media only screen and (min-width: 426px) and (max-width: 768px) {
   #home {
     height: 1000px;
   }
@@ -409,14 +485,14 @@ body {
     display: grid;
     align-items: center;
   }
-  .homeText h3{
+  .homeText h3 {
     font-size: 30px;
     margin-bottom: 20px;
   }
   .homeText {
     padding-top: 90px;
   }
-  .conText > div > p{
+  .conText > div > p {
     width: 100%;
   }
   .conText > div {
@@ -439,11 +515,36 @@ body {
     width: 200px;
     left: 0;
     right: 0;
+  }
+  /* About Page */
+  .about {
+    display: grid;
+    justify-content: end;
+  }
+  
+  .aboutImage {
+    width: 200px;
+    /* border: 2px solid; */
+    height: auto;
+    margin: 0 auto 20px;
+  }
+  .aboutImage img {
+    width: 100%;
+    height: auto;
+  }
+  .aboutText {
+    /* border: 2px solid red; */
+    width: auto;
+    height: auto;
+    margin: 0;
+  }
+  .bio {
+    display: grid;
   }
 }
 
 /* Extra Small Devices / Mobile (<480px) */
-@media only screen and (max-width: 479px) {
+@media only screen and (max-width: 426px) {
   #home {
     height: 1000px;
   }
@@ -451,14 +552,14 @@ body {
     display: grid;
     align-items: center;
   }
-  .homeText h3{
+  .homeText h3 {
     font-size: 30px;
     margin-bottom: 20px;
   }
   .homeText {
     padding-top: 90px;
   }
-  .conText > div > p{
+  .conText > div > p {
     width: 100%;
   }
   .conText > div {
@@ -482,4 +583,34 @@ body {
     left: 0;
     right: 0;
   }
+
+    /* About Page */
+    .about {
+      display: grid;
+      /* justify-content: center; */
+      /* border: 2px solid; */
+      height: auto;
+    }
+
+
+    .aboutImage {
+      width: 200px;
+      /* border: 2px solid; */
+      height: auto;
+      margin: 0 auto 20px;
+    }
+    .aboutImage img {
+      width: 100%;
+      height: auto;
+    }
+    .aboutText {
+      /* border: 2px solid red; */
+      width: auto;
+      height: auto;
+      margin: 0;
+    }
+    .bio {
+      display: grid;
+    }
+    
 }
